[gd_scene load_steps=93 format=2]

[ext_resource path="res://hat_attack_left.png" type="Texture" id=1]
[ext_resource path="res://weapon_attack_left.png" type="Texture" id=2]
[ext_resource path="res://robe_attack_left.png" type="Texture" id=3]
[ext_resource path="res://attack_left.png" type="Texture" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://pants_attack_left.png" type="Texture" id=6]
[ext_resource path="res://shoulders_attack_left.png" type="Texture" id=7]
[ext_resource path="res://walk_left.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="SpriteFrames" id=45]
animations = [ {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "up",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 27.0
height = 16.0

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="SpriteFrames" id=56]
animations = [ {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="SpriteFrames" id=67]
animations = [ {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1024, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1536, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 512, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1024, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 1536, 1536, 512, 512 )

[sub_resource type="SpriteFrames" id=84]
animations = [ {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[node name="Player" type="Area2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
speed = 100

[node name="AnimatedSprite4" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 45 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
animation = "up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 56 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 23 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 34 )

[node name="AnimatedSprite6" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 67 )

[node name="AnimatedSprite7" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 84 )
frame = 9
playing = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
